--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "title": "nahtnam's blog",
   "description": "my blog",
   "colors": {
-    "primary": "#3f51b5"
+    "primary": "#0a0a0a"
   },
   "posts": [
     "advice-to-my-friends",
