--- a/config.json
+++ b/config.json
@@ -5,6 +5,7 @@
     "primary": "#0a0a0a"
   },
   "posts": [
+    "automagically-organize-your-canvas-life",
     "my-new-favorite-browser",
     "advice-to-my-friends",
     "building-a-blog-with-next-js",
